--- a/css/layer.css
+++ b/css/layer.css
@@ -3,13 +3,14 @@
     z-index: 19891014
 }
 
-    .layui-m-layer * {
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
-        box-sizing: content-box
-    }
+.layui-m-layer * {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box
+}
 
-.layui-m-layermain, .layui-m-layershade {
+.layui-m-layermain,
+.layui-m-layershade {
     position: fixed;
     left: 0;
     top: 0;
@@ -18,21 +19,21 @@
 }
 
 .layui-m-layershade {
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0, 0, 0, .5);
     pointer-events: auto
 }
 
 .layui-m-layermain {
     display: table;
-    font-family: Helvetica,arial,sans-serif;
+    font-family: Helvetica, arial, sans-serif;
     pointer-events: none
 }
 
-    .layui-m-layermain .layui-m-layersection {
-        display: table-cell;
-        vertical-align: middle;
-        text-align: center
-    }
+.layui-m-layermain .layui-m-layersection {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center
+}
 
 .layui-m-layerchild {
     position: relative;
@@ -41,7 +42,7 @@
     background-color: #fff;
     font-size: 14px;
     border-radius: 5px;
-    box-shadow: 0 0 8px rgba(0,0,0,.1);
+    box-shadow: 0 0 8px rgba(0, 0, 0, .1);
     pointer-events: auto;
     -webkit-overflow-scrolling: touch;
     -webkit-animation-fill-mode: both;
@@ -146,7 +147,8 @@
     text-align: center
 }
 
-.layui-m-layerbtn span, .layui-m-layerchild h3 {
+.layui-m-layerbtn span,
+.layui-m-layerchild h3 {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap
@@ -168,20 +170,21 @@
     line-height: 0
 }
 
-    .layui-m-layer2 .layui-m-layercont i {
-        width: 25px;
-        height: 25px;
-        margin-left: 8px;
-        display: inline-block;
-        background-color: #fff;
-        border-radius: 100%;
-        -webkit-animation: layui-m-anim-loading 1.4s infinite ease-in-out;
-        animation: layui-m-anim-loading 1.4s infinite ease-in-out;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both
-    }
+.layui-m-layer2 .layui-m-layercont i {
+    width: 25px;
+    height: 25px;
+    margin-left: 8px;
+    display: inline-block;
+    background-color: #fff;
+    border-radius: 100%;
+    -webkit-animation: layui-m-anim-loading 1.4s infinite ease-in-out;
+    animation: layui-m-anim-loading 1.4s infinite ease-in-out;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both
+}
 
-.layui-m-layerbtn, .layui-m-layerbtn span {
+.layui-m-layerbtn,
+.layui-m-layerbtn span {
     position: relative;
     text-align: center;
     border-radius: 0 0 5px 5px
@@ -192,7 +195,10 @@
 }
 
 @-webkit-keyframes layui-m-anim-loading {
-    0%,100%,80% {
+
+    0%,
+    100%,
+    80% {
         transform: scale(0);
         -webkit-transform: scale(0)
     }
@@ -204,7 +210,10 @@
 }
 
 @keyframes layui-m-anim-loading {
-    0%,100%,80% {
+
+    0%,
+    100%,
+    80% {
         transform: scale(0);
         -webkit-transform: scale(0)
     }
@@ -226,7 +235,7 @@
     animation-delay: -.16s
 }
 
-.layui-m-layer2 .layui-m-layercont > div {
+.layui-m-layer2 .layui-m-layercont>div {
     line-height: 22px;
     padding-top: 7px;
     margin-bottom: 20px;
@@ -245,27 +254,27 @@
     background-color: #F2F2F2
 }
 
-    .layui-m-layerbtn span {
-        display: block;
-        -moz-box-flex: 1;
-        box-flex: 1;
-        -webkit-box-flex: 1;
-        font-size: 14px;
-        cursor: pointer
-    }
+.layui-m-layerbtn span {
+    display: block;
+    -moz-box-flex: 1;
+    box-flex: 1;
+    -webkit-box-flex: 1;
+    font-size: 14px;
+    cursor: pointer
+}
 
-        .layui-m-layerbtn span[yes] {
-            color: #40AFFE
-        }
+.layui-m-layerbtn span[yes] {
+    color: #40AFFE
+}
 
-        .layui-m-layerbtn span[no] {
-            border-right: 1px solid #D0D0D0;
-            border-radius: 0 0 0 5px
-        }
+.layui-m-layerbtn span[no] {
+    border-right: 1px solid #D0D0D0;
+    border-radius: 0 0 0 5px
+}
 
-        .layui-m-layerbtn span:active {
-            background-color: #F6F6F6
-        }
+.layui-m-layerbtn span:active {
+    background-color: #F6F6F6
+}
 
 .layui-m-layerend {
     position: absolute;
@@ -281,23 +290,24 @@
     font-size: 30px
 }
 
-    .layui-m-layerend::after, .layui-m-layerend::before {
-        position: absolute;
-        left: 5px;
-        top: 15px;
-        content: '';
-        width: 18px;
-        height: 1px;
-        background-color: #999;
-        transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-        border-radius: 3px
-    }
+.layui-m-layerend::after,
+.layui-m-layerend::before {
+    position: absolute;
+    left: 5px;
+    top: 15px;
+    content: '';
+    width: 18px;
+    height: 1px;
+    background-color: #999;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    border-radius: 3px
+}
 
-    .layui-m-layerend::after {
-        transform: rotate(-45deg);
-        -webkit-transform: rotate(-45deg)
-    }
+.layui-m-layerend::after {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg)
+}
 
 body .layui-m-layer .layui-m-layer-footer {
     position: fixed;
@@ -313,7 +323,7 @@ body .layui-m-layer .layui-m-layer-footer {
 .layui-m-layer-footer .layui-m-layercont {
     padding: 20px;
     border-radius: 5px 5px 0 0;
-    background-color: rgba(255,255,255,.8)
+    background-color: rgba(255, 255, 255, .8)
 }
 
 .layui-m-layer-footer .layui-m-layerbtn {
@@ -323,27 +333,27 @@ body .layui-m-layer .layui-m-layer-footer {
     border-top: none
 }
 
-    .layui-m-layer-footer .layui-m-layerbtn span {
-        background-color: rgba(255,255,255,.8)
-    }
+.layui-m-layer-footer .layui-m-layerbtn span {
+    background-color: rgba(255, 255, 255, .8)
+}
 
-        .layui-m-layer-footer .layui-m-layerbtn span[no] {
-            color: #FD482C;
-            border-top: 1px solid #c2c2c2;
-            border-radius: 0 0 5px 5px
-        }
+.layui-m-layer-footer .layui-m-layerbtn span[no] {
+    color: #FD482C;
+    border-top: 1px solid #c2c2c2;
+    border-radius: 0 0 5px 5px
+}
 
-        .layui-m-layer-footer .layui-m-layerbtn span[yes] {
-            margin-top: 10px;
-            border-radius: 5px
-        }
+.layui-m-layer-footer .layui-m-layerbtn span[yes] {
+    margin-top: 10px;
+    border-radius: 5px
+}
 
 body .layui-m-layer .layui-m-layer-msg {
     width: auto;
     max-width: 90%;
     margin: 0 auto;
     /*bottom: -150px;*/
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0, 0, 0, .7);
     color: #fff
 }
 
