--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,9 @@
     align-items: flex-start;
     border-radius: 25px;
     margin: 20px auto 0 auto;
+    background: url('../img/card.png') no-repeat;
+    background-size: 100%;
+    background-position: center;
 }
 
 .top-xm,
@@ -130,7 +133,7 @@
 .ym-span {
     color: blue;
     font-size: 40px;
-    background: url('/yqfk/img/ym.png') no-repeat;
+    background: url('../img/ym.png') no-repeat;
     background-size: 52px;
     background-position: right;
     padding-right: 55px;
@@ -144,6 +147,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: rgb(153 239 125 / 20%);
 }
 
 .mid-msg>span {
@@ -208,6 +212,8 @@
     align-items: center;
     text-align: center;
     color: #FFF;
+    background: url('../img/hs-green.png') no-repeat;
+    background-size: 300px;
 }
 
 .hs-mc {
@@ -231,14 +237,30 @@
 .hs-jg {
     width: 100%;
     height: 140px;
-    font-size: 60px;
-    line-height: 60px;
     font-weight: 600;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
 }
 
-.hs-jg>div {
+.hs-jg-day {
+    line-height: 50px;
+    font-size: 130px;
+    margin-right: 5px;
+}
+
+.hs-jg-content {
     font-size: 30px;
     line-height: 50px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+#hs-jg-content-2 {
+    font-size: 50px;
 }
 
 .hs-sj {
